<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/LinearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/employee1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/firstnameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/firstname" />

                <TextView
                    android:id="@+id/lastnameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lastname" />

                <TextView
                    android:id="@+id/jobtitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jobtitle" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/employeeInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:layout_weight="1"
            android:text="@string/employee_info"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="413dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/oneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="auto"
            android:gravity="center"
            android:onClick="numberClicked"
            android:text="@string/_1" />
        android:textAlignment="center"
        android:onClick="numberClicked"/>

        <TextView
            android:id="@+id/twoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="auto"
            android:gravity="center"
            android:onClick="numberClicked"
            android:text="@string/_2" />
        android:textAlignment="center"
        android:onClick="numberClicked"/>

        <TextView
            android:id="@+id/threeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="numberClicked"
            android:text="@string/_3" />
        android:textAlignment="center"
        android:onClick="numberClicked"/>

        <TextView
            android:id="@+id/fourTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="numberClicked"
            android:text="@string/_4" />
        android:textAlignment="center"
        android:onClick="numberClicked"/>

        <TextView
            android:id="@+id/fiveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="numberClicked"
            android:text="@string/_5" />
        android:textAlignment="center"
        android:onClick="numberClicked"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>